// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default topic behavior 1`] = `
"{
  \\"resource\\": {
    \\"aws_sns_topic\\": {
      \\"root_Topic_18CB51FA\\": {}
    }
  }
}"
`;

exports[`default topic behavior 2`] = `
Object {
  "tree": Object {
    "children": Object {
      "root": Object {
        "children": Object {
          "Topic": Object {
            "attributes": Object {
              "wing:resource:connections": Array [],
              "wing:resource:stateful": true,
            },
            "children": Object {
              "Default": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.snsTopic.SnsTopic",
                  "version": "10.0.11",
                },
                "id": "Default",
                "path": "root/Topic/Default",
              },
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.0.25",
            },
            "id": "Topic",
            "path": "root/Topic",
          },
          "aws": Object {
            "constructInfo": Object {
              "fqn": "@cdktf/provider-aws.provider.AwsProvider",
              "version": "10.0.11",
            },
            "id": "aws",
            "path": "root/aws",
          },
          "backend": Object {
            "constructInfo": Object {
              "fqn": "cdktf.LocalBackend",
              "version": "0.13.2",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": Object {
          "fqn": "cdktf.TerraformStack",
          "version": "0.13.2",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": Object {
      "fqn": "cdktf.App",
      "version": "0.13.2",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`topic with subscriber function 1`] = `
"const $cap = {};
async function $proc($cap, event) {
        console.log(\\"Received: \\", event);
      }
async function $snsEventWrapper($cap, event) {
 for (const record of event.Records ?? []) {
   await $proc($cap, record.Sns);
 }
}
exports.handler = async function(event) {
  return await $snsEventWrapper($cap, event);
};"
`;

exports[`topic with subscriber function 2`] = `
"{
  \\"resource\\": {
    \\"aws_iam_role\\": {
      \\"root_TopicOnMessage3bb76602ac1030e9_IamRole_B6E3315E\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      }
    },
    \\"aws_iam_role_policy\\": {
      \\"root_TopicOnMessage3bb76602ac1030e9_IamRolePolicy_17EFC447\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\",\\\\\\"Action\\\\\\":\\\\\\"none:null\\\\\\",\\\\\\"Resource\\\\\\":\\\\\\"*\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.root_TopicOnMessage3bb76602ac1030e9_IamRole_B6E3315E.name}\\"
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"root_TopicOnMessage3bb76602ac1030e9_IamRolePolicyAttachment_4E4E74E3\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.root_TopicOnMessage3bb76602ac1030e9_IamRole_B6E3315E.name}\\"
      }
    },
    \\"aws_lambda_function\\": {
      \\"root_TopicOnMessage3bb76602ac1030e9_000ED6D6\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"WING_FUNCTION_NAME\\": \\"Topic-OnMessage-3bb76602ac1030e9\\"
          }
        },
        \\"function_name\\": \\"Topic-OnMessage-3bb76602ac1030e9\\",
        \\"handler\\": \\"index.handler\\",
        \\"role\\": \\"\${aws_iam_role.root_TopicOnMessage3bb76602ac1030e9_IamRole_B6E3315E.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.root_TopicOnMessage3bb76602ac1030e9_Bucket_ED67A8E5.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.root_TopicOnMessage3bb76602ac1030e9_S3Object_E99EDE70.key}\\"
      }
    },
    \\"aws_lambda_permission\\": {
      \\"root_Topic_TopicTopicInvokePermission3bb76602ac1030e9_72B05025\\": {
        \\"action\\": \\"lambda:InvokeFunction\\",
        \\"function_name\\": \\"\${aws_lambda_function.root_TopicOnMessage3bb76602ac1030e9_000ED6D6.function_name}\\",
        \\"principal\\": \\"sns.amazonaws.com\\",
        \\"source_arn\\": \\"\${aws_sns_topic.root_Topic_18CB51FA.arn}\\"
      }
    },
    \\"aws_s3_bucket\\": {
      \\"root_TopicOnMessage3bb76602ac1030e9_Bucket_ED67A8E5\\": {}
    },
    \\"aws_s3_object\\": {
      \\"root_TopicOnMessage3bb76602ac1030e9_S3Object_E99EDE70\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.root_TopicOnMessage3bb76602ac1030e9_Bucket_ED67A8E5.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      }
    },
    \\"aws_sns_topic\\": {
      \\"root_Topic_18CB51FA\\": {}
    },
    \\"aws_sns_topic_subscription\\": {
      \\"root_Topic_TopicTopicSubsription3bb76602ac1030e9_383CDA21\\": {
        \\"endpoint\\": \\"\${aws_lambda_function.root_TopicOnMessage3bb76602ac1030e9_000ED6D6.arn}\\",
        \\"protocol\\": \\"lambda\\",
        \\"topic_arn\\": \\"\${aws_sns_topic.root_Topic_18CB51FA.arn}\\"
      }
    }
  }
}"
`;

exports[`topic with subscriber function 3`] = `
Object {
  "tree": Object {
    "children": Object {
      "root": Object {
        "children": Object {
          "Topic": Object {
            "attributes": Object {
              "wing:resource:connections": Array [
                Object {
                  "direction": "outbound",
                  "relationship": "on_message",
                  "resource": "root/Topic-OnMessage-3bb76602ac1030e9",
                },
                Object {
                  "direction": "inbound",
                  "relationship": "on_message",
                  "resource": "root/Topic",
                },
              ],
              "wing:resource:stateful": true,
            },
            "children": Object {
              "Default": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.snsTopic.SnsTopic",
                  "version": "10.0.11",
                },
                "id": "Default",
                "path": "root/Topic/Default",
              },
              "Topic-TopicInvokePermission-3bb76602ac1030e9": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.lambdaPermission.LambdaPermission",
                  "version": "10.0.11",
                },
                "id": "Topic-TopicInvokePermission-3bb76602ac1030e9",
                "path": "root/Topic/Topic-TopicInvokePermission-3bb76602ac1030e9",
              },
              "Topic-TopicSubsription-3bb76602ac1030e9": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.snsTopicSubscription.SnsTopicSubscription",
                  "version": "10.0.11",
                },
                "id": "Topic-TopicSubsription-3bb76602ac1030e9",
                "path": "root/Topic/Topic-TopicSubsription-3bb76602ac1030e9",
              },
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.0.25",
            },
            "id": "Topic",
            "path": "root/Topic",
          },
          "Topic-OnMessage-3bb76602ac1030e9": Object {
            "attributes": Object {
              "wing:resource:connections": Array [],
              "wing:resource:stateful": false,
            },
            "children": Object {
              "Asset": Object {
                "constructInfo": Object {
                  "fqn": "cdktf.TerraformAsset",
                  "version": "0.13.2",
                },
                "id": "Asset",
                "path": "root/Topic-OnMessage-3bb76602ac1030e9/Asset",
              },
              "Bucket": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.s3Bucket.S3Bucket",
                  "version": "10.0.11",
                },
                "id": "Bucket",
                "path": "root/Topic-OnMessage-3bb76602ac1030e9/Bucket",
              },
              "Default": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.lambdaFunction.LambdaFunction",
                  "version": "10.0.11",
                },
                "id": "Default",
                "path": "root/Topic-OnMessage-3bb76602ac1030e9/Default",
              },
              "IamRole": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.iamRole.IamRole",
                  "version": "10.0.11",
                },
                "id": "IamRole",
                "path": "root/Topic-OnMessage-3bb76602ac1030e9/IamRole",
              },
              "IamRolePolicy": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.iamRolePolicy.IamRolePolicy",
                  "version": "10.0.11",
                },
                "id": "IamRolePolicy",
                "path": "root/Topic-OnMessage-3bb76602ac1030e9/IamRolePolicy",
              },
              "IamRolePolicyAttachment": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.iamRolePolicyAttachment.IamRolePolicyAttachment",
                  "version": "10.0.11",
                },
                "id": "IamRolePolicyAttachment",
                "path": "root/Topic-OnMessage-3bb76602ac1030e9/IamRolePolicyAttachment",
              },
              "S3Object": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.s3Object.S3Object",
                  "version": "10.0.11",
                },
                "id": "S3Object",
                "path": "root/Topic-OnMessage-3bb76602ac1030e9/S3Object",
              },
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.0.25",
            },
            "id": "Topic-OnMessage-3bb76602ac1030e9",
            "path": "root/Topic-OnMessage-3bb76602ac1030e9",
          },
          "aws": Object {
            "constructInfo": Object {
              "fqn": "@cdktf/provider-aws.provider.AwsProvider",
              "version": "10.0.11",
            },
            "id": "aws",
            "path": "root/aws",
          },
          "backend": Object {
            "constructInfo": Object {
              "fqn": "cdktf.LocalBackend",
              "version": "0.13.2",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": Object {
          "fqn": "cdktf.TerraformStack",
          "version": "0.13.2",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": Object {
      "fqn": "cdktf.App",
      "version": "0.13.2",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;
